style: Update scrollbar style

--- a/src/index.scss
+++ b/src/index.scss
@@ -77,3 +77,20 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
+
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background: hsl(var(--accent));
+    border-radius: 8px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: hsl(var(--primary));
+}
